src/components/AboutSection/AboutSection.scss
@import "../../styles/mediaQueries.scss";
@import "../../styles/constants.module.scss";
.about-us-section-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  background-color: rgba(250, 250, 250, 1);

  .about-us-content-container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    width: $mobile-view-width;
    gap: 32px;
    padding-top: 24px;
    padding-bottom: 24px;

    @include smallDesktopScreen {
      display: flex;
      flex-flow: row;
      justify-content: space-between;
      align-items: center;
      width: $desktop-view-width;
      gap: 83.22px;
    }
    .about-us-logo-container {
      flex-shrink: 0;
      @include smallDesktopScreen {
        order: 1;
      }
      img {
        width: 102px;
        height: 95px;
        @include smallDesktopScreen {
          width: 178.22px;
          height: 166px;
        }
      }
    }

    .about-us-information-container {
      display: flex;
      flex-direction: column;
      align-items: flex-start;
      justify-content: flex-start;
      gap: 16px;
      width: 331px;

      @include smallDesktopScreen {
        order: 0;
        gap: 16px;
        width: 569px;
      }

      .section-title-container {
        display: flex;
        flex-direction: row;
        justify-content: flex-start;
        align-items: flex-start;
        font-size: 18px;
        line-height: 35px;
        letter-spacing: 1.25px;

        @include smallDesktopScreen {
          font-size: 30px;
          letter-spacing: 2.140000104904175px;
        }
      }
      .about-us-descriptions-container {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        justify-content: flex-start;
        font-size: 18px;
        line-height: 28px;
        letter-spacing: 2.140000104904175px;
        @include smallDesktopScreen {
          width: 100%;
          font-size: 20px;
          line-height: 30px;
        }
        .about-us-description-top-text {
          width: 331px;

          @include smallDesktopScreen {
            width: 100%;
            padding-bottom: 32px;
          }
        }
        .about-us-description-bottom-text {
          width: 331px;
          @include smallDesktopScreen {
            width: 100%;
          }
        }
      }
      .app-stores-container {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        justify-content: flex-start;
        width: 180px;
        gap: 16px;
        padding-bottom: 32px;

        @include smallDesktopScreen {
          display: flex;
          flex-direction: row-reverse;
          justify-content: flex-end;
          align-items: flex-start;
          order: 2;
        }

        .apple-store-icon-container,
        .google-play-store-icon-container {
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: center;
          border: 0.5px solid;
          border-color: rgba(0, 0, 0, 1);
          border-radius: 10px;
          padding: 7px 12px;
          gap: 7px;

          .apps-text-container {
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: center;
            width: 130px;
            height: 36px;

            .apps-top-text {
              font-size: 13px;
              font-weight: 440;
              line-height: 18px;
              letter-spacing: 1.2899999618530273px;
              text-align: center;
              height: 18px;

              @include smallDesktopScreen {
                font-size: 11.3px;
              }
            }
            .apps-bottom-text {
              height: 20px;
              font-size: 16px;
              font-weight: 400;
              line-height: 20px;
              letter-spacing: 1.2899999618530273px;
              text-align: center;
            }
          }
        }
      }
    }
  }
}

